[package]
name = "carton"
edition = "2021"
version.workspace = true

[dependencies]
carton-core = { path = "../core" }
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
sui-move = { git = "https://github.com/MystenLabs/sui", features = ["build"], rev = "2062d2f34912c84fc699f1a2a6e1d485c7f56f79" }

anyhow.workspace = true
move-package.workspace = true
sui-types.workspace = true
colored = "2.0.0"
