[package]
name = "carton-core"
edition = "2021"

authors.workspace = true
version.workspace = true

[dependencies]
dirs = "4.0.0"
toml = "0.7.2"
sui = { git = "https://github.com/MystenLabs/sui", rev = "f5e66118e3fc80b2fb330444834a85b8aa9896ad"  }
sui-keys = { git = "https://github.com/MystenLabs/sui", rev = "f5e66118e3fc80b2fb330444834a85b8aa9896ad"  }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", rev = "f5e66118e3fc80b2fb330444834a85b8aa9896ad"  }

sui-types.workspace = true
anyhow.workspace = true
move-package.workspace = true
glob = "0.3.1"
colored.workspace = true